name:                tsvjson
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/danchoi/tsvjson#readme
license:             BSD3
license-file:        LICENSE
author:              DHC
maintainer:          danchoi@danielchoi.com
copyright:           2018 DHC
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable tsvjson
  hs-source-dirs:      .
  main-is:             Main.hs
  other-modules:       Core, TSVParser
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , attoparsec
                     , bytestring
                     , lens
                     , lens-aeson
                     , optparse-applicative
                     , text

  default-extensions:  OverloadedStrings, RecordWildCards
